debug dynamic; multigpu scripts for regnet

--- a/test/stable.ipynb
+++ b/test/stable.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.8/dist-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append(\"..\")\n",
@@ -32,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,12 +60,69 @@
     "    if num == 7:\n",
     "        factors = [1, 7]\n",
     "    elif num == 14:\n",
-    "        factors = [1, 2, 7]\n",
+    "        factors = [1, 2, 7, 14]\n",
     "    elif num == 28:\n",
-    "        factors = [1, 2, 4, 7, 14]\n",
+    "        factors = [1, 2, 4, 7, 14, 28]\n",
     "    elif num == 56:\n",
-    "        factors = [1, 2, 4, 7, 8, 14, 28]\n",
+    "        factors = [1, 2, 4, 7, 8, 14, 28, 56]\n",
     "    return factors\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "log_dense/c24_w56_g8: 0.004497ms*2 + 0.013729ms = 0.022723ms\n",
+      "log_dense/c56_w28_g8: 0.004672ms*2 + 0.018701ms = 0.028045ms\n",
+      "log_dense/c152_w14_g8: 0.010101ms*2 + 0.028257ms = 0.048460ms\n",
+      "log_dense/c368_w7_g8: 0.016373ms*2 + 0.163355ms = 0.196100ms\n",
+      "log_dense/c32_w56_g16: 0.005276ms*2 + 0.022911ms = 0.033463ms\n",
+      "log_dense/c64_w28_g16: 0.005333ms*2 + 0.027414ms = 0.038081ms\n",
+      "log_dense/c160_w14_g16: 0.010190ms*2 + 0.048083ms = 0.068462ms\n",
+      "log_dense/c384_w7_g16: 0.017745ms*2 + 0.135136ms = 0.170627ms\n",
+      "log_dense/c48_w56_g24: 0.008297ms*2 + 0.054688ms = 0.071281ms\n",
+      "log_dense/c96_w28_g24: 0.008694ms*2 + 0.043727ms = 0.061115ms\n",
+      "log_dense/c240_w14_g24: 0.016230ms*2 + 0.061705ms = 0.094164ms\n",
+      "log_dense/c528_w7_g24: 0.032912ms*2 + 0.433233ms = 0.499057ms\n",
+      "log_dense/c64_w56_g16: 0.008520ms*2 + 0.110418ms = 0.127457ms\n",
+      "log_dense/c128_w28_g16: 0.012856ms*2 + 0.067918ms = 0.093631ms\n",
+      "log_dense/c288_w14_g16: 0.017673ms*2 + 0.122419ms = 0.157765ms\n",
+      "log_dense/c672_w7_g16: 0.045665ms*2 + 0.414802ms = 0.506132ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "# display dense model's speed\n",
+    "for num in [\"002\", \"004\", \"006\", \"008\"]:\n",
+    "    channels, group = regnet_parameters(num)\n",
+    "\n",
+    "    for i, width in enumerate(widths):\n",
+    "        channel = channels[i]\n",
+    "        save_dir = f\"log_dense/c{channel}_w{width}_g{group}\"\n",
+    "        bs = TVMDynamicBlockEvaluator(channel, width, group, save_dir)\n",
+    "\n",
+    "        if not os.path.exists(save_dir):\n",
+    "            continue\n",
+    "\n",
+    "        # dense part\n",
+    "        bs.setup()\n",
+    "        # do not autotune!\n",
+    "        bs.build()\n",
+    "        res = bs.evaluate(\"dense\", verbose=True)\n",
+    "        print(f\"{save_dir}: {res['conv1']*1000:.6f}ms*2 + {res['conv2']*1000:.6f}ms = {(res['conv1']*2+res['conv2'])*1000:.6f}ms\")\n",
+    "\n",
+    "\n",
+    "        # sparse part\n",
+    "        # factors = get_factors(width)\n",
+    "        # for g in factors:\n",
+    "        #     for s in [0.25, 0.5, 0.75]:\n",
+    "        #         s = int(s * ((width// g) ** 2))\n",
+    "        #         print(bs(\"sparse\", s, g, True, True, True))"
    ]
   },
   {
@@ -83,19 +131,38 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "__call__() missing 2 required positional arguments: 'sparselen' and 'granularity'",
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.8/dist-packages/xgboost/compat.py:36: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  from pandas import MultiIndex, Int64Index\n",
+      "/usr/local/lib/python3.8/dist-packages/xgboost/training.py:17: UserWarning: Old style callback is deprecated.  See: https://xgboost.readthedocs.io/en/latest/python/callbacks.html\n",
+      "  warnings.warn(f'Old style callback is deprecated.  See: {link}', UserWarning)\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [3]\u001b[0m, in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m bs \u001b[39m=\u001b[39m TVMDynamicBlockEvaluator(channel, width, group, \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mlog_stable/c\u001b[39m\u001b[39m{\u001b[39;00mchannel\u001b[39m}\u001b[39;00m\u001b[39m_w\u001b[39m\u001b[39m{\u001b[39;00mwidth\u001b[39m}\u001b[39;00m\u001b[39m_g\u001b[39m\u001b[39m{\u001b[39;00mgroup\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      7\u001b[0m bs\u001b[39m.\u001b[39msetup()\n\u001b[0;32m----> 8\u001b[0m bs()\n",
-      "\u001b[0;31mTypeError\u001b[0m: __call__() missing 2 required positional arguments: 'sparselen' and 'granularity'"
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/root/dynconv-performance-benchmark/test/stable.ipynb Cell 3'\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a224447582d6479636f6e762d646f636b6572227d/root/dynconv-performance-benchmark/test/stable.ipynb#ch0000002vscode-remote?line=9'>10</a>\u001b[0m bs\u001b[39m.\u001b[39msetup()\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a224447582d6479636f6e762d646f636b6572227d/root/dynconv-performance-benchmark/test/stable.ipynb#ch0000002vscode-remote?line=10'>11</a>\u001b[0m \u001b[39mfor\u001b[39;00m name, layer \u001b[39min\u001b[39;00m bs\u001b[39m.\u001b[39mlayers\u001b[39m.\u001b[39mitems():\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a224447582d6479636f6e762d646f636b6572227d/root/dynconv-performance-benchmark/test/stable.ipynb#ch0000002vscode-remote?line=11'>12</a>\u001b[0m     res \u001b[39m=\u001b[39m test_stability(layer, \u001b[39m300\u001b[39;49m, \u001b[39m5\u001b[39;49m)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a224447582d6479636f6e762d646f636b6572227d/root/dynconv-performance-benchmark/test/stable.ipynb#ch0000002vscode-remote?line=12'>13</a>\u001b[0m     mean \u001b[39m=\u001b[39m np(res)\u001b[39m.\u001b[39mmean()\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a224447582d6479636f6e762d646f636b6572227d/root/dynconv-performance-benchmark/test/stable.ipynb#ch0000002vscode-remote?line=13'>14</a>\u001b[0m     std \u001b[39m=\u001b[39m np(res)\u001b[39m.\u001b[39mstd()\n",
+      "File \u001b[0;32m~/dynconv-performance-benchmark/test/stable.py:25\u001b[0m, in \u001b[0;36mtest_stability\u001b[0;34m(scheduler, n_trial, repeat)\u001b[0m\n\u001b[1;32m     <a href='file:///~/dynconv-performance-benchmark/test/stable.py?line=22'>23</a>\u001b[0m scheduler\u001b[39m.\u001b[39mn_trial \u001b[39m=\u001b[39m n_trial\n\u001b[1;32m     <a href='file:///~/dynconv-performance-benchmark/test/stable.py?line=23'>24</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(repeat):\n\u001b[0;32m---> <a href='file:///~/dynconv-performance-benchmark/test/stable.py?line=24'>25</a>\u001b[0m     scheduler\u001b[39m.\u001b[39;49mautotune(refresh\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n\u001b[1;32m     <a href='file:///~/dynconv-performance-benchmark/test/stable.py?line=25'>26</a>\u001b[0m     scheduler\u001b[39m.\u001b[39mbuild()\n\u001b[1;32m     <a href='file:///~/dynconv-performance-benchmark/test/stable.py?line=26'>27</a>\u001b[0m     res\u001b[39m.\u001b[39mappend(scheduler\u001b[39m.\u001b[39mevaluate())\n",
+      "File \u001b[0;32m~/dynconv-performance-benchmark/layers/base.py:104\u001b[0m, in \u001b[0;36mBaseLayerScheduler.autotune\u001b[0;34m(self, refresh)\u001b[0m\n\u001b[1;32m     <a href='file:///~/dynconv-performance-benchmark/layers/base.py?line=97'>98</a>\u001b[0m measure_option \u001b[39m=\u001b[39m autotvm\u001b[39m.\u001b[39mmeasure_option(\n\u001b[1;32m     <a href='file:///~/dynconv-performance-benchmark/layers/base.py?line=98'>99</a>\u001b[0m     builder\u001b[39m=\u001b[39mautotvm\u001b[39m.\u001b[39mLocalBuilder(),\n\u001b[1;32m    <a href='file:///~/dynconv-performance-benchmark/layers/base.py?line=99'>100</a>\u001b[0m     runner\u001b[39m=\u001b[39mautotvm\u001b[39m.\u001b[39mLocalRunner(repeat\u001b[39m=\u001b[39m\u001b[39m3\u001b[39m, min_repeat_ms\u001b[39m=\u001b[39m\u001b[39m150\u001b[39m, timeout\u001b[39m=\u001b[39m\u001b[39m4\u001b[39m),\n\u001b[1;32m    <a href='file:///~/dynconv-performance-benchmark/layers/base.py?line=100'>101</a>\u001b[0m )\n\u001b[1;32m    <a href='file:///~/dynconv-performance-benchmark/layers/base.py?line=102'>103</a>\u001b[0m tuner \u001b[39m=\u001b[39m autotvm\u001b[39m.\u001b[39mtuner\u001b[39m.\u001b[39mXGBTuner(task)\n\u001b[0;32m--> <a href='file:///~/dynconv-performance-benchmark/layers/base.py?line=103'>104</a>\u001b[0m tuner\u001b[39m.\u001b[39;49mtune(\n\u001b[1;32m    <a href='file:///~/dynconv-performance-benchmark/layers/base.py?line=104'>105</a>\u001b[0m     n_trial\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mn_trial,\n\u001b[1;32m    <a href='file:///~/dynconv-performance-benchmark/layers/base.py?line=105'>106</a>\u001b[0m     measure_option\u001b[39m=\u001b[39;49mmeasure_option,\n\u001b[1;32m    <a href='file:///~/dynconv-performance-benchmark/layers/base.py?line=106'>107</a>\u001b[0m     callbacks\u001b[39m=\u001b[39;49m[autotvm\u001b[39m.\u001b[39;49mcallback\u001b[39m.\u001b[39;49mlog_to_file(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49msave_path)],\n\u001b[1;32m    <a href='file:///~/dynconv-performance-benchmark/layers/base.py?line=107'>108</a>\u001b[0m )\n",
+      "File \u001b[0;32m/usr/local/lib/python3.8/dist-packages/tvm-0.9.dev913+gae285c6f0-py3.8-linux-x86_64.egg/tvm/autotvm/tuner/xgboost_tuner.py:105\u001b[0m, in \u001b[0;36mXGBTuner.tune\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    <a href='file:///usr/local/lib/python3.8/dist-packages/tvm-0.9.dev913%2Bgae285c6f0-py3.8-linux-x86_64.egg/tvm/autotvm/tuner/xgboost_tuner.py?line=103'>104</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtune\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):  \u001b[39m# pylint: disable=arguments-differ\u001b[39;00m\n\u001b[0;32m--> <a href='file:///usr/local/lib/python3.8/dist-packages/tvm-0.9.dev913%2Bgae285c6f0-py3.8-linux-x86_64.egg/tvm/autotvm/tuner/xgboost_tuner.py?line=104'>105</a>\u001b[0m     \u001b[39msuper\u001b[39;49m(XGBTuner, \u001b[39mself\u001b[39;49m)\u001b[39m.\u001b[39;49mtune(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m    <a href='file:///usr/local/lib/python3.8/dist-packages/tvm-0.9.dev913%2Bgae285c6f0-py3.8-linux-x86_64.egg/tvm/autotvm/tuner/xgboost_tuner.py?line=106'>107</a>\u001b[0m     \u001b[39m# manually close pool to avoid multiprocessing issues\u001b[39;00m\n\u001b[1;32m    <a href='file:///usr/local/lib/python3.8/dist-packages/tvm-0.9.dev913%2Bgae285c6f0-py3.8-linux-x86_64.egg/tvm/autotvm/tuner/xgboost_tuner.py?line=107'>108</a>\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcost_model\u001b[39m.\u001b[39m_close_pool()\n",
+      "File \u001b[0;32m/usr/local/lib/python3.8/dist-packages/tvm-0.9.dev913+gae285c6f0-py3.8-linux-x86_64.egg/tvm/autotvm/tuner/tuner.py:134\u001b[0m, in \u001b[0;36mTuner.tune\u001b[0;34m(self, n_trial, measure_option, early_stopping, callbacks, si_prefix)\u001b[0m\n\u001b[1;32m    <a href='file:///usr/local/lib/python3.8/dist-packages/tvm-0.9.dev913%2Bgae285c6f0-py3.8-linux-x86_64.egg/tvm/autotvm/tuner/tuner.py?line=130'>131</a>\u001b[0m configs \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnext_batch(\u001b[39mmin\u001b[39m(n_parallel, n_trial \u001b[39m-\u001b[39m i))\n\u001b[1;32m    <a href='file:///usr/local/lib/python3.8/dist-packages/tvm-0.9.dev913%2Bgae285c6f0-py3.8-linux-x86_64.egg/tvm/autotvm/tuner/tuner.py?line=132'>133</a>\u001b[0m inputs \u001b[39m=\u001b[39m [MeasureInput(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtask\u001b[39m.\u001b[39mtarget, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtask, config) \u001b[39mfor\u001b[39;00m config \u001b[39min\u001b[39;00m configs]\n\u001b[0;32m--> <a href='file:///usr/local/lib/python3.8/dist-packages/tvm-0.9.dev913%2Bgae285c6f0-py3.8-linux-x86_64.egg/tvm/autotvm/tuner/tuner.py?line=133'>134</a>\u001b[0m results \u001b[39m=\u001b[39m measure_batch(inputs)\n\u001b[1;32m    <a href='file:///usr/local/lib/python3.8/dist-packages/tvm-0.9.dev913%2Bgae285c6f0-py3.8-linux-x86_64.egg/tvm/autotvm/tuner/tuner.py?line=135'>136</a>\u001b[0m \u001b[39m# keep best config\u001b[39;00m\n\u001b[1;32m    <a href='file:///usr/local/lib/python3.8/dist-packages/tvm-0.9.dev913%2Bgae285c6f0-py3.8-linux-x86_64.egg/tvm/autotvm/tuner/tuner.py?line=136'>137</a>\u001b[0m \u001b[39mfor\u001b[39;00m k, (inp, res) \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(\u001b[39mzip\u001b[39m(inputs, results)):\n",
+      "File \u001b[0;32m/usr/local/lib/python3.8/dist-packages/tvm-0.9.dev913+gae285c6f0-py3.8-linux-x86_64.egg/tvm/autotvm/measure/measure.py:291\u001b[0m, in \u001b[0;36mcreate_measure_batch.<locals>.measure_batch\u001b[0;34m(measure_inputs)\u001b[0m\n\u001b[1;32m    <a href='file:///usr/local/lib/python3.8/dist-packages/tvm-0.9.dev913%2Bgae285c6f0-py3.8-linux-x86_64.egg/tvm/autotvm/measure/measure.py?line=288'>289</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mmeasure_batch\u001b[39m(measure_inputs):\n\u001b[1;32m    <a href='file:///usr/local/lib/python3.8/dist-packages/tvm-0.9.dev913%2Bgae285c6f0-py3.8-linux-x86_64.egg/tvm/autotvm/measure/measure.py?line=289'>290</a>\u001b[0m     build_results \u001b[39m=\u001b[39m builder\u001b[39m.\u001b[39mbuild(measure_inputs)\n\u001b[0;32m--> <a href='file:///usr/local/lib/python3.8/dist-packages/tvm-0.9.dev913%2Bgae285c6f0-py3.8-linux-x86_64.egg/tvm/autotvm/measure/measure.py?line=290'>291</a>\u001b[0m     results \u001b[39m=\u001b[39m runner\u001b[39m.\u001b[39;49mrun(measure_inputs, build_results)\n\u001b[1;32m    <a href='file:///usr/local/lib/python3.8/dist-packages/tvm-0.9.dev913%2Bgae285c6f0-py3.8-linux-x86_64.egg/tvm/autotvm/measure/measure.py?line=291'>292</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m results\n",
+      "File \u001b[0;32m/usr/local/lib/python3.8/dist-packages/tvm-0.9.dev913+gae285c6f0-py3.8-linux-x86_64.egg/tvm/autotvm/measure/measure_methods.py:390\u001b[0m, in \u001b[0;36mRPCRunner.run\u001b[0;34m(self, measure_inputs, build_results)\u001b[0m\n\u001b[1;32m    <a href='file:///usr/local/lib/python3.8/dist-packages/tvm-0.9.dev913%2Bgae285c6f0-py3.8-linux-x86_64.egg/tvm/autotvm/measure/measure_methods.py?line=387'>388</a>\u001b[0m \u001b[39mfor\u001b[39;00m future \u001b[39min\u001b[39;00m futures:\n\u001b[1;32m    <a href='file:///usr/local/lib/python3.8/dist-packages/tvm-0.9.dev913%2Bgae285c6f0-py3.8-linux-x86_64.egg/tvm/autotvm/measure/measure_methods.py?line=388'>389</a>\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> <a href='file:///usr/local/lib/python3.8/dist-packages/tvm-0.9.dev913%2Bgae285c6f0-py3.8-linux-x86_64.egg/tvm/autotvm/measure/measure_methods.py?line=389'>390</a>\u001b[0m         res \u001b[39m=\u001b[39m future\u001b[39m.\u001b[39;49mresult()\n\u001b[1;32m    <a href='file:///usr/local/lib/python3.8/dist-packages/tvm-0.9.dev913%2Bgae285c6f0-py3.8-linux-x86_64.egg/tvm/autotvm/measure/measure_methods.py?line=390'>391</a>\u001b[0m         results\u001b[39m.\u001b[39mappend(res)\n\u001b[1;32m    <a href='file:///usr/local/lib/python3.8/dist-packages/tvm-0.9.dev913%2Bgae285c6f0-py3.8-linux-x86_64.egg/tvm/autotvm/measure/measure_methods.py?line=391'>392</a>\u001b[0m     \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m ex:  \u001b[39m# pylint: disable=broad-except\u001b[39;00m\n",
+      "File \u001b[0;32m/usr/lib/python3.8/concurrent/futures/_base.py:434\u001b[0m, in \u001b[0;36mFuture.result\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    <a href='file:///usr/lib/python3.8/concurrent/futures/_base.py?line=430'>431</a>\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_state \u001b[39m==\u001b[39m FINISHED:\n\u001b[1;32m    <a href='file:///usr/lib/python3.8/concurrent/futures/_base.py?line=431'>432</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m__get_result()\n\u001b[0;32m--> <a href='file:///usr/lib/python3.8/concurrent/futures/_base.py?line=433'>434</a>\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_condition\u001b[39m.\u001b[39;49mwait(timeout)\n\u001b[1;32m    <a href='file:///usr/lib/python3.8/concurrent/futures/_base.py?line=435'>436</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_state \u001b[39min\u001b[39;00m [CANCELLED, CANCELLED_AND_NOTIFIED]:\n\u001b[1;32m    <a href='file:///usr/lib/python3.8/concurrent/futures/_base.py?line=436'>437</a>\u001b[0m     \u001b[39mraise\u001b[39;00m CancelledError()\n",
+      "File \u001b[0;32m/usr/lib/python3.8/threading.py:302\u001b[0m, in \u001b[0;36mCondition.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    <a href='file:///usr/lib/python3.8/threading.py?line=299'>300</a>\u001b[0m \u001b[39mtry\u001b[39;00m:    \u001b[39m# restore state no matter what (e.g., KeyboardInterrupt)\u001b[39;00m\n\u001b[1;32m    <a href='file:///usr/lib/python3.8/threading.py?line=300'>301</a>\u001b[0m     \u001b[39mif\u001b[39;00m timeout \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m--> <a href='file:///usr/lib/python3.8/threading.py?line=301'>302</a>\u001b[0m         waiter\u001b[39m.\u001b[39;49macquire()\n\u001b[1;32m    <a href='file:///usr/lib/python3.8/threading.py?line=302'>303</a>\u001b[0m         gotit \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m    <a href='file:///usr/lib/python3.8/threading.py?line=303'>304</a>\u001b[0m     \u001b[39melse\u001b[39;00m:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
     "# test stability on one regnet's parameters\n",
+    "# To be continued\n",
     "channels, group = regnet_parameters(\"006\")\n",
     "\n",
     "for i, width in enumerate(widths):\n",
