--- a/test/benchmark.ipynb
+++ b/test/benchmark.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.8/dist-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -16,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +79,8 @@
     "        stmt=\"conv(x)\",\n",
     "        globals={'conv': conv, 'x': x},\n",
     "    )\n",
-    "    res = timer.timeit(repeat).raw_times[0]\n",
+    "    res = timer.timeit(repeat)\n",
+    "    res = res.raw_times[0]\n",
     "    return res / repeat\n",
     "\n",
     "def run_add(x, repeat=100):\n",
@@ -121,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,6 +141,63 @@
     "        channel = channels[i]\n",
     "        rb = ResidualBlock(channel, width, group)\n",
     "        rb.speedtest()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_26386/2049601964.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append(res, ignore_index=True)\n",
+      "/tmp/ipykernel_26386/2049601964.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append(res, ignore_index=True)\n",
+      "/tmp/ipykernel_26386/2049601964.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append(res, ignore_index=True)\n",
+      "/tmp/ipykernel_26386/2049601964.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append(res, ignore_index=True)\n",
+      "/tmp/ipykernel_26386/2049601964.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append(res, ignore_index=True)\n",
+      "/tmp/ipykernel_26386/2049601964.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append(res, ignore_index=True)\n",
+      "/tmp/ipykernel_26386/2049601964.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append(res, ignore_index=True)\n",
+      "/tmp/ipykernel_26386/2049601964.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append(res, ignore_index=True)\n",
+      "/tmp/ipykernel_26386/2049601964.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append(res, ignore_index=True)\n",
+      "/tmp/ipykernel_26386/2049601964.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append(res, ignore_index=True)\n",
+      "/tmp/ipykernel_26386/2049601964.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append(res, ignore_index=True)\n",
+      "/tmp/ipykernel_26386/2049601964.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append(res, ignore_index=True)\n",
+      "/tmp/ipykernel_26386/2049601964.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append(res, ignore_index=True)\n",
+      "/tmp/ipykernel_26386/2049601964.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append(res, ignore_index=True)\n",
+      "/tmp/ipykernel_26386/2049601964.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append(res, ignore_index=True)\n",
+      "/tmp/ipykernel_26386/2049601964.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = df.append(res, ignore_index=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.DataFrame(columns=[\"channel\", \"width\", \"group\", \"conv1\", \"conv2\", \"conv3\", \"add\"])\n",
+    "\n",
+    "with open(logpath, \"r\") as f:\n",
+    "    for line in f.readlines():\n",
+    "        res = json.loads(line)\n",
+    "        for name in [\"conv1\", \"conv2\", \"conv3\", \"add\"]:\n",
+    "            res[name] *= 1000  # in ms\n",
+    "        df = df.append(res, ignore_index=True)\n",
+    "df.to_csv(\"benchmark.csv\")"
    ]
   },
   {
