benchmark.ipynb: fuse tvm and pytorch benchmark result

--- a/test/benchmark.ipynb
+++ b/test/benchmark.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,6 +90,13 @@
     "    )\n",
     "    res = timer.timeit(repeat).raw_times[0]\n",
     "    return res / repeat\n",
+    "\n",
+    "def get_flops(channels, width, group):\n",
+    "    conv = lambda cout, cin, H, W, KH, KW, g : (2*cout*H*W)*(cin//g)*KH*KW  # fuse BN, so with bias\n",
+    "    f1 = conv(channels, channels, width, width, 1, 1, 1)\n",
+    "    f2 = conv(channels, channels, width, width, 3, 3, group)\n",
+    "    f3 = channels * width * width\n",
+    "    return 2*f1 + f2 + f3\n",
     "\n",
     "\n",
     "class ResidualBlock(nn.Module):\n",
@@ -123,6 +130,7 @@
     "            \"conv2\": t2,\n",
     "            \"conv3\": t3,\n",
     "            \"add\": ta,\n",
+    "            \"flops\": get_flops(self.channels, self.width, self.group)\n",
     "        }\n",
     "        with open(logpath, \"a+\") as f:\n",
     "            f.write(json.dumps(res) + \"\\n\")\n",
@@ -145,57 +153,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_26386/2049601964.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_18601/1361294175.py:28: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(res, ignore_index=True)\n",
-      "/tmp/ipykernel_26386/2049601964.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_18601/1361294175.py:28: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(res, ignore_index=True)\n",
-      "/tmp/ipykernel_26386/2049601964.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_18601/1361294175.py:28: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(res, ignore_index=True)\n",
-      "/tmp/ipykernel_26386/2049601964.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_18601/1361294175.py:28: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(res, ignore_index=True)\n",
-      "/tmp/ipykernel_26386/2049601964.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_18601/1361294175.py:28: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(res, ignore_index=True)\n",
-      "/tmp/ipykernel_26386/2049601964.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_18601/1361294175.py:28: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(res, ignore_index=True)\n",
-      "/tmp/ipykernel_26386/2049601964.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_18601/1361294175.py:28: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(res, ignore_index=True)\n",
-      "/tmp/ipykernel_26386/2049601964.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_18601/1361294175.py:28: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(res, ignore_index=True)\n",
-      "/tmp/ipykernel_26386/2049601964.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_18601/1361294175.py:28: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(res, ignore_index=True)\n",
-      "/tmp/ipykernel_26386/2049601964.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_18601/1361294175.py:28: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(res, ignore_index=True)\n",
-      "/tmp/ipykernel_26386/2049601964.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_18601/1361294175.py:28: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(res, ignore_index=True)\n",
-      "/tmp/ipykernel_26386/2049601964.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_18601/1361294175.py:28: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(res, ignore_index=True)\n",
-      "/tmp/ipykernel_26386/2049601964.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_18601/1361294175.py:28: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(res, ignore_index=True)\n",
-      "/tmp/ipykernel_26386/2049601964.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_18601/1361294175.py:28: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(res, ignore_index=True)\n",
-      "/tmp/ipykernel_26386/2049601964.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_18601/1361294175.py:28: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(res, ignore_index=True)\n",
-      "/tmp/ipykernel_26386/2049601964.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_18601/1361294175.py:28: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(res, ignore_index=True)\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.DataFrame(columns=[\"channel\", \"width\", \"group\", \"conv1\", \"conv2\", \"conv3\", \"add\"])\n",
+    "df = pd.DataFrame(columns=[\"channel\", \"width\", \"group\", \"conv1\", \"conv2\", \"conv3\", \"add\", \"flops\", \"tconv1\", \"tconv2\"])\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append(\"..\")\n",
+    "sys.path.append(\".\")\n",
+    "from blocks import TVMDynamicBlockEvaluator\n",
     "\n",
     "with open(logpath, \"r\") as f:\n",
     "    for line in f.readlines():\n",
     "        res = json.loads(line)\n",
+    "\n",
+    "        # adjust to ms\n",
     "        for name in [\"conv1\", \"conv2\", \"conv3\", \"add\"]:\n",
     "            res[name] *= 1000  # in ms\n",
+    "        \n",
+    "        # find corresponding tvm impl\n",
+    "        channel, width, group = res[\"channel\"], res[\"width\"], res[\"group\"]\n",
+    "        save_dir = f\"log_dense/c{channel}_w{width}_g{group}\"\n",
+    "        bs = TVMDynamicBlockEvaluator(channel, width, group, save_dir)\n",
+    "        bs.setup()\n",
+    "        # do not autotune!\n",
+    "        bs.build()\n",
+    "        res_tvm = bs.evaluate(verbose=True)\n",
+    "        res[\"tconv1\"] = res_tvm[\"conv1\"] * 1000\n",
+    "        res[\"tconv2\"] = res_tvm[\"conv2\"] * 1000\n",
+    "\n",
     "        df = df.append(res, ignore_index=True)\n",
     "df.to_csv(\"benchmark.csv\")"
    ]
