--- a/test/stable.ipynb
+++ b/test/stable.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.8/dist-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append(\"..\")\n",
@@ -23,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,29 +79,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "log_dense/c24_w56_g8: 0.004497ms*2 + 0.013729ms = 0.022723ms\n",
-      "log_dense/c56_w28_g8: 0.004672ms*2 + 0.018701ms = 0.028045ms\n",
-      "log_dense/c152_w14_g8: 0.010101ms*2 + 0.028257ms = 0.048460ms\n",
-      "log_dense/c368_w7_g8: 0.016373ms*2 + 0.163355ms = 0.196100ms\n",
-      "log_dense/c32_w56_g16: 0.005276ms*2 + 0.022911ms = 0.033463ms\n",
-      "log_dense/c64_w28_g16: 0.005333ms*2 + 0.027414ms = 0.038081ms\n",
-      "log_dense/c160_w14_g16: 0.010190ms*2 + 0.048083ms = 0.068462ms\n",
-      "log_dense/c384_w7_g16: 0.017745ms*2 + 0.135136ms = 0.170627ms\n",
-      "log_dense/c48_w56_g24: 0.008297ms*2 + 0.054688ms = 0.071281ms\n",
-      "log_dense/c96_w28_g24: 0.008694ms*2 + 0.043727ms = 0.061115ms\n",
-      "log_dense/c240_w14_g24: 0.016230ms*2 + 0.061705ms = 0.094164ms\n",
-      "log_dense/c528_w7_g24: 0.032912ms*2 + 0.433233ms = 0.499057ms\n",
-      "log_dense/c64_w56_g16: 0.008520ms*2 + 0.110418ms = 0.127457ms\n",
-      "log_dense/c128_w28_g16: 0.012856ms*2 + 0.067918ms = 0.093631ms\n",
-      "log_dense/c288_w14_g16: 0.017673ms*2 + 0.122419ms = 0.157765ms\n",
-      "log_dense/c672_w7_g16: 0.045665ms*2 + 0.414802ms = 0.506132ms\n"
+      "{'maskconv1': 1.377165e-05, 'conv1': 2.608319e-05, 'conv2': 1.614254e-05}\n",
+      "{'maskconv1': 1.0209120000000002e-05, 'conv1': 7.914050000000001e-06, 'conv2': 2.410673e-05}\n",
+      "{'maskconv1': 1.681436e-05, 'conv1': 1.460807e-05, 'conv2': 5.634341e-05}\n",
+      "{'maskconv1': 1.84575e-05, 'conv1': 1.604045e-05, 'conv2': 6.551552000000001e-05}\n"
      ]
     }
    ],
@@ -115,14 +112,8 @@
     "        bs.build()\n",
     "        res = bs.evaluate(\"dense\", verbose=True)\n",
     "        print(f\"{save_dir}: {res['conv1']*1000:.6f}ms*2 + {res['conv2']*1000:.6f}ms = {(res['conv1']*2+res['conv2'])*1000:.6f}ms\")\n",
-    "\n",
-    "\n",
-    "        # sparse part\n",
-    "        # factors = get_factors(width)\n",
-    "        # for g in factors:\n",
-    "        #     for s in [0.25, 0.5, 0.75]:\n",
-    "        #         s = int(s * ((width// g) ** 2))\n",
-    "        #         print(bs(\"sparse\", s, g, True, True, True))"
+    "        \n",
+    "        break\n"
    ]
   },
   {
