--- a/test/test_dense.ipynb
+++ b/test/test_dense.ipynb
@@ -90,7 +90,7 @@
     "    for g in factors:\n",
     "        for s in ss:\n",
     "            sl = int(s * ((width // g) ** 2))\n",
-    "            sl = (sl // 8) * 8  # better for scheduling\n",
+    "            # sl = (sl // 8) * 8  # better for scheduling\n",
     "            if sl == 0:\n",
     "                continue\n",
     "            \n",
