modified dynamic block; add pooling

--- a/test/validity/layers.ipynb
+++ b/test/validity/layers.ipynb
@@ -39,6 +39,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.8/dist-packages/xgboost/compat.py:36: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  from pandas import MultiIndex, Int64Index\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2.58778e-06"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# test pooling scheduler\n",
+    "s = PoolingScheduler(128, 14, 2, \"log/pooling.log\")\n",
+    "s.n_trial = 40\n",
+    "s.rtol = 1e-5\n",
+    "s.atol = 1e-3\n",
+    "s.autotune(refresh=True)\n",
+    "s.build(display=False)\n",
+    "s.check(runtype=\"pytorch\")\n",
+    "s.evaluate()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
