--- a/test/validity/layers.ipynb
+++ b/test/validity/layers.ipynb
@@ -43,6 +43,36 @@
    "metadata": {},
    "outputs": [
     {
+     "ename": "TypeError",
+     "evalue": "__init__() missing 5 required positional arguments: 'channel_out', 'channel_in', 'width', 'kernel', and 'save_path'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/root/dynconv-performance-benchmark/test/validity/layers.ipynb Cell 3'\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a224447582d6479636f6e762d646f636b6572227d/root/dynconv-performance-benchmark/test/validity/layers.ipynb#ch0000011vscode-remote?line=0'>1</a>\u001b[0m \u001b[39m# test conv dense scheduler\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a224447582d6479636f6e762d646f636b6572227d/root/dynconv-performance-benchmark/test/validity/layers.ipynb#ch0000011vscode-remote?line=1'>2</a>\u001b[0m s \u001b[39m=\u001b[39m GroupConvDenseScheduler(\u001b[39m128\u001b[39;49m, \u001b[39m512\u001b[39;49m, \u001b[39m64\u001b[39;49m, \u001b[39m3\u001b[39;49m, \u001b[39m8\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mlog/groupconv3x3_dense.log\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a224447582d6479636f6e762d646f636b6572227d/root/dynconv-performance-benchmark/test/validity/layers.ipynb#ch0000011vscode-remote?line=2'>3</a>\u001b[0m s\u001b[39m.\u001b[39mn_trial \u001b[39m=\u001b[39m \u001b[39m50\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a224447582d6479636f6e762d646f636b6572227d/root/dynconv-performance-benchmark/test/validity/layers.ipynb#ch0000011vscode-remote?line=3'>4</a>\u001b[0m s\u001b[39m.\u001b[39mrtol \u001b[39m=\u001b[39m \u001b[39m1e-5\u001b[39m\n",
+      "File \u001b[0;32m~/dynconv-performance-benchmark/layers/conv_dense.py:241\u001b[0m, in \u001b[0;36mGroupConvDenseScheduler.__init__\u001b[0;34m(self, channel_out, channel_in, width, kernel, group, save_path)\u001b[0m\n\u001b[1;32m    <a href='file:///~/dynconv-performance-benchmark/layers/conv_dense.py?line=239'>240</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, channel_out, channel_in, width, kernel, group, save_path):\n\u001b[0;32m--> <a href='file:///~/dynconv-performance-benchmark/layers/conv_dense.py?line=240'>241</a>\u001b[0m     \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49m\u001b[39m__init__\u001b[39;49m()\n\u001b[1;32m    <a href='file:///~/dynconv-performance-benchmark/layers/conv_dense.py?line=241'>242</a>\u001b[0m     \u001b[39m# group = min(group, channel_in)\u001b[39;00m\n\u001b[1;32m    <a href='file:///~/dynconv-performance-benchmark/layers/conv_dense.py?line=242'>243</a>\u001b[0m     \u001b[39m# group = min(group, channel_out)\u001b[39;00m\n\u001b[1;32m    <a href='file:///~/dynconv-performance-benchmark/layers/conv_dense.py?line=243'>244</a>\u001b[0m     \u001b[39m# in case group is not expected\u001b[39;00m\n\u001b[1;32m    <a href='file:///~/dynconv-performance-benchmark/layers/conv_dense.py?line=244'>245</a>\u001b[0m     \u001b[39massert\u001b[39;00m channel_in \u001b[39m%\u001b[39m group \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m\n",
+      "\u001b[0;31mTypeError\u001b[0m: __init__() missing 5 required positional arguments: 'channel_out', 'channel_in', 'width', 'kernel', and 'save_path'"
+     ]
+    }
+   ],
+   "source": [
+    "# test conv dense scheduler\n",
+    "s = GroupConvDenseScheduler(512, 512, 64, 3, 8, \"log/groupconv3x3_dense.log\")\n",
+    "s.n_trial = 50\n",
+    "s.rtol = 1e-5\n",
+    "s.atol = 1e-3\n",
+    "s.autotune(refresh=True)\n",
+    "s.build(display=False)\n",
+    "s.check(runtype=\"pytorch\")\n",
+    "s.evaluate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
